<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/black"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/textView"
        style="@style/LabelTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/label_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout1"
        app:layout_constraintTop_toTopOf="parent"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/text_input_layout_width_normal"
        android:layout_height="@dimen/text_input_layout_height_normal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintVertical_bias="0.05"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextName"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height_normal"
            android:hint="@string/hint_name"
            android:inputType="textCapSentences"
            tools:ignore="TextContrastCheck"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/text_input_layout_width_normal"
        android:layout_height="@dimen/text_input_layout_height_normal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height_normal"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            tools:ignore="TextContrastCheck"
            style="@style/EditTextStyle"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/text_input_layout_width_normal"
        android:layout_height="@dimen/text_input_layout_height_normal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height_normal"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            tools:ignore="TextContrastCheck"
            style="@style/EditTextStyle"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="@dimen/text_input_layout_width_normal"
        android:layout_height="@dimen/text_input_layout_height_normal"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextAddress"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_height_normal"
            android:hint="@string/hint_address"
            android:inputType="textCapSentences"
            tools:ignore="TextContrastCheck"
            style="@style/EditTextStyle"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/confirm_button"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height_normal"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="20dp"
        android:text="@string/confirm_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout4"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
        app:layout_constraintVertical_bias="0.6"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/exit_button"
        style="@style/TextButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height_tall"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/exit_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/confirm_button"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
